src/styles/ui.css
/* ... */
.material-icons-outlined {
  font-family: "Material Icons Outlined";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-feature-settings: "liga";
  -webkit-font-smoothing: antialiased;
}

.mk-theme {
  font-family: Roboto, sans-serif;
}

.mk-theme .shaka-bottom-controls {
  width: 100%;
  padding: 0;
  padding-bottom: 0;
  z-index: 1;
}

.mk-theme .shaka-bottom-controls {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

.mk-theme .shaka-ad-controls {
  -webkit-box-ordinal-group: 2;
  -ms-flex-order: 1;
  order: 1;
}

.mk-theme .shaka-controls-button-panel {
  -webkit-box-ordinal-group: 3;
  -ms-flex-order: 2;
  order: 2;
  height: 40px;
  padding: 0 10px;
}

.mk-theme .shaka-range-container {
  margin: 4px 10px 4px 10px;
  top: 0;
}

.mk-theme .shaka-small-play-button {
  -webkit-box-ordinal-group: -2;
  -ms-flex-order: -3;
  order: -3;
}

.mk-theme .shaka-small-play-button[aria-label="Pause"] {
  content: "pause_circle_filled"
}

.mk-theme .shaka-mute-button {
  -webkit-box-ordinal-group: -1;
  -ms-flex-order: -2;
  order: -2;
}

.mk-theme .shaka-controls-button-panel > * {
  margin: 0;
  padding: 3px 8px;
  color: #eee;
  height: 40px;
}

.mk-theme .shaka-controls-button-panel > :focus {
  outline: 0;
  -webkit-box-shadow: inset 0 0 0 2px rgba(27, 127, 204, 0.8);
  box-shadow: inset 0 0 0 2px rgba(27, 127, 204, 0.8);
  color: #fff;
}

.mk-theme .shaka-controls-button-panel > :hover {
  color: #fff;
}

.mk-theme .shaka-controls-button-panel .shaka-volume-bar-container {
  position: relative;
  z-index: 10;
  left: -1px;
  -webkit-box-ordinal-group: 0;
  -ms-flex-order: -1;
  order: -1;
  opacity: 0;
  width: 0;
  -webkit-transition: width 0.2s cubic-bezier(0.4, 0, 1, 1);
  height: 3px;
  transition: width 0.2s cubic-bezier(0.4, 0, 1, 1);
  padding: 0;
}

.mk-theme .shaka-controls-button-panel .shaka-volume-bar-container:focus,
.mk-theme .shaka-controls-button-panel .shaka-volume-bar-container:hover {
  display: block;
  width: 50px;
  opacity: 1;
  padding: 0 6px;
}

.mk-theme .shaka-mute-button:hover + div {
  opacity: 1;
  width: 50px;
  padding: 0 6px;
}

.mk-theme .shaka-current-time {
  padding: 0 10px;
  font-size: 12px;
}

.mk-theme .shaka-seek-bar-container {
  height: 8px;
  position: relative;
  top: 0px;
  border-radius: 0;
  margin-bottom: 0;
}

.mk-theme .shaka-seek-bar-container .shaka-range-element {
  opacity: 0;
}

.mk-theme .shaka-seek-bar-container:hover .shaka-range-element {
  opacity: 1;
  cursor: pointer;
}

/* .mk-theme .shaka-seek-bar-container input[type=range]::-webkit-slider-thumb {
    background: #0accee;
    cursor: pointer
}

.mk-theme .shaka-seek-bar-container input[type=range]::-moz-range-thumb {
    background: #0accee;
    cursor: pointer
}

.mk-theme .shaka-seek-bar-container input[type=range]::-ms-thumb {
    background: #0accee;
    cursor: pointer
} */

.mk-theme .shaka-seek-bar-container input[type="range"] {
  height: 0px;
  -webkit-appearance: none;
  /* margin: 10px 0; */
  opacity: 1;
  width: 100%;
}
.mk-theme .shaka-seek-bar-container input[type="range"]:focus {
  outline: none;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #000000;
  border: 0px solid #000000;
  height: 27px;
  width: 40px;
  border-radius: 49px;
  background: #2eb5c0;
  cursor: pointer;
  -webkit-appearance: none;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-moz-range-track {
  width: 100%;
  height: 14px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 1px 1px 1px #50555c;
  background: #50555c;
  border-radius: 14px;
  border: 0px solid #000000;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-moz-range-thumb {
  box-shadow: 0px 0px 0px #000000;
  border: 0px solid #000000;
  height: 27px;
  width: 50px;
  border-radius: 49px;
  background: #2eb5c0;
  cursor: pointer;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-ms-track {
  width: 100%;
  height: 14px;
  cursor: pointer;
  animate: 0.2s;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-ms-fill-lower {
  background: #50555c;
  border: 0px solid #000000;
  border-radius: 28px;
  box-shadow: 1px 1px 1px #50555c;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-ms-fill-upper {
  background: #50555c;
  border: 0px solid #000000;
  border-radius: 28px;
  box-shadow: 1px 1px 1px #50555c;
}
.mk-theme .shaka-seek-bar-container input[type="range"]::-ms-thumb {
  margin-top: 1px;
  box-shadow: 0px 0px 0px #000000;
  border: 0px solid #000000;
  height: 27px;
  width: 50px;
  border-radius: 49px;
  background: #2eb5c0;
  cursor: pointer;
}

.mk-theme .shaka-video-container * {
  font-family: Roboto, sans-serif;
}

.mk-theme .shaka-video-container .material-icons-round {
  font-family: "Material Icons Outlined";
}

.mk-theme .shaka-overflow-menu,
.mk-theme .shaka-settings-menu {
  border-radius: 2px;
  background: rgba(28, 28, 28, 0.9);
  text-shadow: 0 0 2px rgb(0 0 0%);
  -webkit-transition: opacity 0.1s cubic-bezier(0, 0, 0.2, 1);
  transition: opacity 0.1s cubic-bezier(0, 0, 0.2, 1);
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  right: 10px;
  bottom: 50px;
  padding: 8px 0;
  min-width: 200px;
}

.mk-theme .shaka-settings-menu {
  padding: 0 0 8px 0;
}

.mk-theme .shaka-settings-menu button {
  font-size: 12px;
}

.mk-theme .shaka-settings-menu button span {
  margin-left: 33px;
  font-size: 13px;
}

.mk-theme .shaka-settings-menu button[aria-selected="true"] {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
/* ... */

